--- a/templates/layouts/nav.html
+++ b/templates/layouts/nav.html
@@ -6,37 +6,50 @@
 <div class="container-fluid navbar-container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
 
-        <a class="navLogo hvr-bounce-in" href="{{url_for('index')}}"><img src="/static/img/logos/tandev_v1_brightlightblue.svg"
-                class="img-fluid navLogo" alt="logo"></a>
+        <!-- Logo which serves as home button -->
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon" id="hamburger"></span>
-        </button>
-
-        <!-- Dropdown Button -->
+        <a class="navLogo hvr-bounce-in" href="{{url_for('index')}}"><img
+                src="/static/img/logos/tandev_v1_brightlightblue.svg" class="img-fluid navLogo" alt="logo"></a>
 
 
-        <div class="collapse navbar-collapse"  id="navbarNavDropdown">
+        {% if active == 'search' %}
 
-            <!-- Navbar Menu Items -->
+                <button type="button" id="sidebarCollapse" class="btn btn-info">
+                    <i class="fas fa-align-left"></i>
+                    <span>Toggle Sidebar</span>
+                </button>
+
+            {% endif %}
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon" id="hamburger"></span>
+            </button>
+
+            <!-- Dropdown Button -->
 
 
-            <ul class="navbar-nav ml-auto nav-fill w-50">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
 
-                <li class="nav-item" id="navAbout">
-                    <a class="nav-link hvr-bounce-in" href="{{url_for('about')}}" id="navAboutLink">About</a>
-                </li>
+                <!-- Navbar Menu Items -->
 
-                <li class="nav-item" id="navSearch">
-                    <a class="nav-link hvr-bounce-in" href="{{url_for('search')}}" id="navSearchLink">Search</a>
-                </li>
 
-                <li class="nav-item" id="navLogReg">
-                    <a class="nav-link hvr-bounce-in" href="#" id="navLogRegLink">Login/Register</a>
-                </li>
-            </ul>
-        </div>
+
+                <ul class="navbar-nav ml-auto nav-fill w-50">
+
+                    <li class="nav-item" id="navAbout">
+                        <a class="nav-link hvr-bounce-in" href="{{url_for('about')}}" id="navAboutLink">About</a>
+                    </li>
+
+                    <li class="nav-item" id="navSearch">
+                        <a class="nav-link hvr-bounce-in" href="{{url_for('search')}}" id="navSearchLink">Search</a>
+                    </li>
+
+                    <li class="nav-item" id="navLogReg">
+                        <a class="nav-link hvr-bounce-in" href="#" id="navLogRegLink">Login/Register</a>
+                    </li>
+                </ul>
+            </div>
 
     </nav>
 </div>
