--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -26,6 +26,8 @@
     @media (min-width: $bp-ipadpro) {
         margin-left: 15vw;
     }
+
+    background-color: $pink;
 }
 
 #sidebar.active {
@@ -101,7 +103,7 @@ ul ul a {
 }
 
 
-
+// Filter styling
 
 .nav-tabs {
     padding-left: 1em;
@@ -117,7 +119,7 @@ ul ul a {
 
 .skill-column {
 
-
+padding: 1em;
     @media (min-width: $bp-mobile) {
         padding: 2rem;
     }
@@ -131,6 +133,7 @@ ul ul a {
 
 .top-filter-row {
     border: 1px solid white;
+    padding: 1em;
   
 }
 
@@ -138,30 +141,22 @@ ul ul a {
     border-left: 1px solid white;
     border-right: 1px solid white;
     border-bottom: 1px solid white;
+padding: 1em;
    
 }
 
-#districtSelect {
-
-
-    @media (max-width: $bp-ipadpro) {
-        margin: 1em 0;
-        width: 50% !important;
-        }
-
+.selector-wrapper {
+    margin: 1em;
+    display: inline !important;
 }
-
-
 
 .filtercol {
     margin-left: 1rem;
 }
 
 .filter-header {
+    margin: 1em;
 
-    @media (max-width: $bp-ipadpro) {
-    margin: 1em 0;
-    }
 }
 
 .refresh {
