--- a/static/css/awesome-bootstrap-checkbox.css
+++ b/static/css/awesome-bootstrap-checkbox.css
@@ -51,7 +51,7 @@
 .abc-checkbox input[type="radio"]:checked + label::after {
   font-family: "FontAwesome";
   content: "";
-  background-color: #2581B0;
+  background-color: #0B132B;
 color: white; }
 .abc-checkbox input[type="checkbox"]:indeterminate + label::after,
 .abc-checkbox input[type="radio"]:indeterminate + label::after {
@@ -80,7 +80,7 @@ color: white; }
 
 .abc-checkbox-primary input[type="checkbox"]:checked + label::before,
 .abc-checkbox-primary input[type="radio"]:checked + label::before {
-  background-color: #007bff;
+  background-color: #0B132B;
   border-color: #007bff; }
 .abc-checkbox-primary input[type="checkbox"]:checked + label::after,
 .abc-checkbox-primary input[type="radio"]:checked + label::after {
@@ -96,8 +96,8 @@ color: white; }
 
 .abc-checkbox-info input[type="checkbox"]:checked + label::before,
 .abc-checkbox-info input[type="radio"]:checked + label::before {
-  background-color: #17a2b8;
-  border-color: #17a2b8; }
+  background-color: #0B132B;
+  border-color: #0B132B; }
 .abc-checkbox-info input[type="checkbox"]:checked + label::after,
 .abc-checkbox-info input[type="radio"]:checked + label::after {
   color: #fff; }
