add font awesome icons.

--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -25,10 +25,10 @@
         <ul class="nav nav-tabs">
 
             <li class="tab-nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#skillsTab" id="skillsTab">I'm proficient in...</a>
+                <a class="nav-link active" data-toggle="tab" href="#skillsTab" id="skillsTab"><i class="fas fa-share-alt"></i> I'm proficient in...</a>
             </li>
             <li class="tab-nav-item">
-                <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab" id="desiredSkillsTab">Looking for...</a>
+                <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab" id="desiredSkillsTab"><i class="fas fa-search"></i> Looking for...</a>
             </li>
 
         </ul>
@@ -71,7 +71,7 @@
 
             <div class="col-12 col-md-6">
 
-                <h5 class="filter-header">District</h5>
+                <h5 class="filter-header"><i class="fas fa-location-arrow"></i> District</h5>
 
             </div>
 
@@ -110,9 +110,9 @@
 
             <div class="row">
 
-                <div class="col-12 col-md-3">
+                <div class="col-12">
 
-                    <h5 class="filter-header">Communication</h5>
+                    <h5 class="filter-header"><i class="fas fa-comments"></i>  Communication</h5>
 
                 </div>
             </div>
@@ -166,7 +166,7 @@
                 <div class="col-12 col-md-3">
 
 
-                    <h5 class="filter-header">Other</h5>
+                    <h5 class="filter-header"><i class="fas fa-question"></i>  Other</h5>
 
                 </div>
             </div>
