--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -25,10 +25,12 @@
         <ul class="nav nav-tabs">
 
             <li class="tab-nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#skillsTab" id="skillsTab"><i class="fas fa-share-alt"></i> I'm proficient in...</a>
+                <a class="nav-link active" data-toggle="tab" href="#skillsTab" id="skillsTab"><i
+                        class="fas fa-share-alt"></i> I'm proficient in...</a>
             </li>
             <li class="tab-nav-item">
-                <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab" id="desiredSkillsTab"><i class="fas fa-search"></i> Looking for...</a>
+                <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab" id="desiredSkillsTab"><i
+                        class="fas fa-search"></i> Looking for...</a>
             </li>
 
         </ul>
@@ -112,7 +114,7 @@
 
                 <div class="col-12">
 
-                    <h5 class="filter-header"><i class="fas fa-comments"></i>  Communication</h5>
+                    <h5 class="filter-header"><i class="fas fa-comments"></i> Communication</h5>
 
                 </div>
             </div>
@@ -163,10 +165,10 @@
 
                 <!-- Other filter option header -->
 
-                <div class="col-12 col-md-3">
+                <div class="col-12">
 
 
-                    <h5 class="filter-header"><i class="fas fa-question"></i>  Other</h5>
+                    <h5 class="filter-header"><i class="fas fa-question"></i> Other</h5>
 
                 </div>
             </div>
@@ -174,7 +176,7 @@
             <!-- Other filter options -->
 
             <div class="row">
-                <div class="col-12 col-md-3 filtercol">
+                <div class="col-12">
 
                     <div class="form-check abc-checkbox ">
                         <input class="form-check-input" name="lookingForCoFounder" id="lookingForCoFounder"
@@ -184,12 +186,10 @@
                         </label>
                     </div>
 
-                </div>
 
-            </div>
 
-            <div class="row">
-                <div class="col-12  col-md-3 filtercol">
+
+
 
                     <div class="form-check abc-checkbox ">
                         <input class="form-check-input" name="availableForHir" id="availableForHir" type="checkbox">
