--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,14 +36,14 @@ a:hover {
   }
 }
 
-#navbar.nav-link {
+.nav-link {
   color: #0B132B !important;
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
 }
 
 @media (max-width: 992px) {
-  #navbar.nav-link {
+  .nav-link {
     color: white !important;
   }
 }
@@ -55,31 +55,31 @@ a:hover {
 }
 
 @media (max-width: 992px) {
-  #navbar.navbar-collapse {
+  .navbar-collapse {
     margin-right: 35%;
   }
 }
 
-#navbar.nav-link.scrolled {
+.nav-link.scrolled {
   color: white !important;
 }
 
-#navbar.bg-light {
+.bg-light {
   background-color: transparent !important;
 }
 
 @media (max-width: 992px) {
-  #navbar.bg-light {
+  .bg-light {
     background-color: #0B132B !important;
   }
 }
 
-#navbar.bg-light.scrolled {
+.bg-light.scrolled {
   background-color: #2581B0 !important;
 }
 
 @media (max-width: 992px) {
-  #navbar.bg-light.scrolled {
+  .bg-light.scrolled {
     background-color: #0B132B !important;
   }
 }
@@ -171,14 +171,14 @@ a:hover {
   }
 }
 
-#navbar.nav-link {
+.nav-link {
   color: #0B132B !important;
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
 }
 
 @media (max-width: 992px) {
-  #navbar.nav-link {
+  .nav-link {
     color: white !important;
   }
 }
@@ -190,31 +190,31 @@ a:hover {
 }
 
 @media (max-width: 992px) {
-  #navbar.navbar-collapse {
+  .navbar-collapse {
     margin-right: 35%;
   }
 }
 
-#navbar.nav-link.scrolled {
+.nav-link.scrolled {
   color: white !important;
 }
 
-#navbar.bg-light {
+.bg-light {
   background-color: transparent !important;
 }
 
 @media (max-width: 992px) {
-  #navbar.bg-light {
+  .bg-light {
     background-color: #0B132B !important;
   }
 }
 
-#navbar.bg-light.scrolled {
+.bg-light.scrolled {
   background-color: #2581B0 !important;
 }
 
 @media (max-width: 992px) {
-  #navbar.bg-light.scrolled {
+  .bg-light.scrolled {
     background-color: #0B132B !important;
   }
 }
@@ -518,14 +518,14 @@ a:hover {
   }
 }
 
-#navbar.nav-link {
+.nav-link {
   color: #0B132B !important;
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
 }
 
 @media (max-width: 992px) {
-  #navbar.nav-link {
+  .nav-link {
     color: white !important;
   }
 }
@@ -537,31 +537,31 @@ a:hover {
 }
 
 @media (max-width: 992px) {
-  #navbar.navbar-collapse {
+  .navbar-collapse {
     margin-right: 35%;
   }
 }
 
-#navbar.nav-link.scrolled {
+.nav-link.scrolled {
   color: white !important;
 }
 
-#navbar.bg-light {
+.bg-light {
   background-color: transparent !important;
 }
 
 @media (max-width: 992px) {
-  #navbar.bg-light {
+  .bg-light {
     background-color: #0B132B !important;
   }
 }
 
-#navbar.bg-light.scrolled {
+.bg-light.scrolled {
   background-color: #2581B0 !important;
 }
 
 @media (max-width: 992px) {
-  #navbar.bg-light.scrolled {
+  .bg-light.scrolled {
     background-color: #0B132B !important;
   }
 }
