--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -15,7 +15,7 @@
     <nav id="sidebar">
 
         <div class="sidebar-header d-flex justify-content-center">
-            <h3>Search Users</h3>
+            <h4>Search Users</h4>
         </div>
 
 
@@ -159,11 +159,14 @@
             </div>
 
         </div>
+
+        <!-- Other filter option header -->
+
         <div class="div filter-row">
 
             <div class="row">
 
-                <!-- Other filter option header -->
+
 
                 <div class="col-12">
 
@@ -176,7 +179,7 @@
             <!-- Other filter options -->
 
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 filtercol">
 
                     <div class="form-check abc-checkbox ">
                         <input class="form-check-input" name="lookingForCoFounder" id="lookingForCoFounder"
@@ -187,10 +190,6 @@
                     </div>
 
 
-
-
-
-
                     <div class="form-check abc-checkbox ">
                         <input class="form-check-input" name="availableForHir" id="availableForHir" type="checkbox">
                         <label class="form-check-label" for="availableForHir">
@@ -198,12 +197,6 @@
                         </label>
                     </div>
 
-                </div>
-            </div>
-
-            <div class="row">
-
-                <div class="col-12 col-md-3 filtercol">
 
                     <div class="form-check abc-checkbox ">
                         <input class="form-check-input" name="availableForProjects" id="availableForProjects"
@@ -215,11 +208,13 @@
 
                 </div>
             </div>
-
-
-
-
         </div>
+
+        <div class="search-btn-wrap">
+            <button>Search Now</button>
+        </div>
+
+
 
     </nav>
 
