--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -20,6 +20,10 @@
         width: 35vw;
     }
 
+ 
+    overflow-y: scroll;
+    overflow-x: hidden;
+
 }
    
 #sidebarCollapse {
@@ -77,7 +81,7 @@ a[data-toggle="collapse"] {
 
 #sidebar ul li a {
     padding: 10px;
-    font-size: 1.1em;
+    font-size:0.9em;
     display: block;
 }
 
@@ -93,7 +97,7 @@ a[aria-expanded="true"] {
 }
 
 ul ul a {
-    font-size: 0.9em !important;
+    font-size: 0.7em !important;
     padding-left: 30px !important;
     background: $midblue;
 }
@@ -165,3 +169,6 @@ padding: 1em;
     margin-left: 1em;
 }
 
+.search-btn-wrap {
+    height: 20vh;
+}
