--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -28,7 +28,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         type="text/css" />
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
 
 
 
@@ -105,11 +106,10 @@
 
     <script src="{{url_for('static', filename='js/about.js')}}"></script>
 
-    {% endif %}
 
     <!-- Conditional CSS and JS files which load only when the 'About' page is active.-->
 
-    {% if active == 'search' %}
+    {% elif active == 'search' %}
 
     <style>
         #navbar.bg-light {
@@ -122,15 +122,22 @@
     </style>
 
 
+
     <script src="{{url_for('static', filename='js/search.js')}}"></script>
 
-    <script> 
-$(function () {
-    $('select').selectpicker();
-});
+    {% elif active == 'logreg' %}
 
-</script>
+    <style>
+        #navbar.bg-light {
+            background-color: #0B132B !important;
+        }
 
+        .nav-link {
+            color: #2581B0 !important;
+        }
+    </style>
+
+    <script src="{{url_for('static', filename='js/logreg.js')}}"></script>
     {% endif %}
 
 </body>
