--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -210,7 +210,7 @@
             </div>
         </div>
 
-        <div class="search-btn-wrap">
+        <div class="search-btn-wrap d-flex justify-content-center text-align-center">
             <button>Search Now</button>
         </div>
 
