--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -20,12 +20,12 @@
         width: 35vw;
     }
 
- 
-    overflow-y: scroll;
+
+    overflow-y: auto;
     overflow-x: hidden;
 
 }
-   
+
 #sidebarCollapse {
     @media (min-width: $bp-ipadpro) {
         margin-left: 15vw;
@@ -81,7 +81,7 @@ a[data-toggle="collapse"] {
 
 #sidebar ul li a {
     padding: 10px;
-    font-size:0.9em;
+    font-size: 0.9em;
     display: block;
 }
 
@@ -119,7 +119,8 @@ ul ul a {
 
 .skill-column {
 
-padding: 1em;
+    padding: 1em;
+
     @media (min-width: $bp-mobile) {
         padding: 2rem;
     }
@@ -134,15 +135,14 @@ padding: 1em;
 .top-filter-row {
     border: 1px solid white;
     padding: 1em;
-  
+
 }
 
 .filter-row {
-    border-left: 1px solid white;
-    border-right: 1px solid white;
+
     border-bottom: 1px solid white;
-padding: 1em;
-   
+    padding: 1em;
+
 }
 
 .selector-wrapper {
