--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -3,5 +3,6 @@
 @import "_index.scss";
 @import "_about.scss";
 @import "_search.scss";
+@import "_logreg.scss";
 
 // For comments on some of the thought processes behind the CSS, please look at main.css.
