--- a/static/scss/_layout.scss
+++ b/static/scss/_layout.scss
@@ -122,6 +122,15 @@ h3.heading {
 
 }
 
+.heading-ul-large {
+    width: 30rem;
+    height: 0.1rem;
+    background-color: $brightmidblue;
+    margin: 0 auto;
+    display: block;
+
+}
+
 // Footer
 
 footer {
