--- a/templates/pages/logreg.html
+++ b/templates/pages/logreg.html
@@ -4,10 +4,27 @@
 
 {% block content %}
 
-<div class="container-fluid logreg-wrapper">
+<div class="container logreg-wrapper">
 
-    
-Hello
+
+    <div class="row justify-content-center">
+
+        <div class="jumbotron form-jumbo">
+            <form class="col-12">
+                <div class="form-group">
+                    <label for="formGroupExampleInput">Example label</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                </div>
+                <div class="form-group">
+                    <label for="formGroupExampleInput2">Another label</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
 </div>
+
+
 {% endblock %}
