create bare-bones logreg jumbotron.

--- a/static/scss/_logreg.scss
+++ b/static/scss/_logreg.scss
@@ -4,6 +4,12 @@
 
 .form-jumbo {
     width: 50%;
-    height: 50vh;
-    margin-top: 20vh;
+    height: 70vh;
+    margin-top: 10vh;
+    padding-top: 10vh;
+}
+
+.tab-nav-item {
+    margin-top: 5vh;
+    padding: 1em;
 }
