--- a/templates/pages/logreg.html
+++ b/templates/pages/logreg.html
@@ -9,17 +9,51 @@
 
     <div class="row justify-content-center">
 
+        <!-- Create centered jumbotron -->
+
         <div class="jumbotron form-jumbo">
-            <form class="col-12">
-                <div class="form-group">
-                    <label for="formGroupExampleInput">Example label</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+            <div class="col-12">
+
+                <!-- Create separate login and register tabs. -->
+
+                <ul class="nav nav-tabs">
+
+                    <li class="tab-nav-item">
+                        <a class="nav-link active" data-toggle="tab" href="#loginTab" id="loginTab">
+                            <i class="fas fa-sign-in-alt"></i> Login</a>
+                    </li>
+                    <li class="tab-nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#registerTab" id="registerTab"><i
+                                class="fas fa-user-plus"></i> Register</a>
+                    </li>
+
+                </ul>
+
+                <!-- Tab Contents -->
+
+                <div class="tab-content">
+
+                    <!-- Begin "I'm proficient in..." Skills Tab -->
+                    <div id="skillstab" class="tab-pane fade show active">
+
+                        <form id="loginform">
+
+                            <div class="form-group">
+                                <label for="formGroupExampleInput">Example label</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput"
+                                    placeholder="Example input">
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Another label</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput2"
+                                    placeholder="Another input">
+                            </div>
+                            
+                        </form>
+
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="formGroupExampleInput2">Another label</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-                </div>
-            </form>
+            </div>
         </div>
     </div>
 </div>
