--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -25,12 +25,12 @@
             <ul class="nav nav-tabs">
 
                 <li class="nav-item">
-                    <a class="nav-link active skill-tab-item" data-toggle="tab" href="#skillsTab" id="skills-tab" role="tab"
+                    <a class="nav-link active" data-toggle="tab" href="#skillsTab" id="skills-tab" role="tab"
                         aria-controls="skills"><i class="fas fa-share-alt"></i> I'm proficient
                         in...</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link skill-tab-item" data-toggle="tab" visibility="shown" href="#desiredSkillsTab" id="desiredSkills-tab" role="tab"
+                    <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab" id="desiredSkills-tab" role="tab"
                         aria-controls="desiredSkills"><i class="fas fa-search"></i> Looking
                         for...</a>
                 </li>
