--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -54,6 +54,8 @@
 
     {% include 'layouts/nav.html' %}
 
+    {% include 'components/message.html' %}
+
     <!-- Add page content  -->
 
     {% block content %} {% endblock %}
