replace icon on about page.

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -119,7 +119,7 @@
 
                     <div class="col-md-4">
                         <div class="feature">
-                            <i class="fas fa-laptop-code fa-3x feature-icon" data-fa-transform="shrink-3 up-5"></i>
+                                <i class="fas fa-plug fa-3x feature-icon" data-fa-transform="shrink-3 up-5"></i>
                             <h3 class="feature-header">Connect</h3>
                             <p>Found your perfect match, or perhaps -- we are modern, after all -- several of them? Add
                                 them
